--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,6 +2,19 @@
   padding: 3rem 1.5rem;
   margin: 0 6rem;
 }
+
+.flex--center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.border--bottom {
+  padding-bottom: 1.5rem;
+  padding-top: 1.5rem;
+  border-bottom: 1px solid var(--bs-white-transparent-l);
+}
+
 @media only screen and (max-width: 81.25em) {
   .main__content {
     margin: 0;
