--- a/trash/mainc-install.css
+++ b/trash/mainc-install.css
@@ -1,4 +1,4 @@
-.main-c__install {
+.content__install {
   text-align: start;
   width: 100%;
 
@@ -114,7 +114,7 @@
   flex-direction: column;
 }
 
-.other-method__box {
+.other-method__logo-box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -122,7 +122,7 @@
   cursor: pointer;
 }
 
-.other-method__box * {
+.other-method__logo-box * {
   pointer-events: none;
 }
 
